--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.1",
+    "@css-render/vue3-ssr": "^0.15.14",
     "@iconify-json/carbon": "^1.2.5",
     "@iconify-json/twemoji": "^1.2.2",
     "@nuxt/devtools": "^1.7.0",
     "@nuxt/eslint": "^0.7.4",
     "@nuxtjs/color-mode": "^3.5.2",
     "@pinia/nuxt": "^0.9.0",
+    "@types/node": "^22.10.6",
     "@unocss/eslint-config": "^0.65.3",
     "@unocss/nuxt": "^0.65.3",
     "@vite-pwa/nuxt": "^0.10.6",
@@ -31,11 +33,18 @@
     "nuxt": "^3.15.0",
     "pinia": "^2.3.0",
     "typescript": "^5.7.2",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "^2.2.0",
+    "vueuc": "^0.4.64"
   },
   "resolutions": {
     "unplugin": "^2.1.0",
     "vite": "^6.0.6",
     "vite-plugin-inspect": "^0.10.6"
+  },
+  "dependencies": {
+    "@unocss/reset": "^65.4.0",
+    "date-fns-tz": "^3.2.0",
+    "lucide-vue-next": "^0.471.0",
+    "naive-ui": "^2.41.0"
   }
 }
